# chatbot-test-harness

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_STRUCTURE.md  README.md  env.example  pyproject.toml  requirements.txt  run.sh  setup_env.sh
docs/: CHATGPT_BEHAVIOR.md  QUICKSTART.md  TROUBLESHOOTING.md
src/backend/: config.py  main.py  memory.py  query_agent.py
src/frontend/: debug.html  index.html
